# dev-rag-kit

./: .env.example  .gitignore  MANIFEST.in  README.md  docker-compose.yml  main.py  pyproject.toml
config/: default.yaml  gold_standard.example.json
docs/: GITHUB.md  USAGE.md
examples/: basic_rag.py  example.md  gold_standard.json
src/dev_rag/: __init__.py  app.py  cli.py  config.py
src/dev_rag/evaluation/: __init__.py  cli.py  dataset_factory.py  evaluator.py
src/dev_rag/ingestion/: __init__.py  chunker.py  cli.py  embeddings.py  pipeline.py  qdrant_uploader.py  schemas.py
src/dev_rag/orchestration/: __init__.py  cli.py  llm_client.py  orchestrator.py  prompt_manager.py
src/dev_rag/repo_intel/: cli.py  graph.py  state.py  web.py
src/dev_rag/repo_intel/rag/: __init__.py  indexer.py  retriever.py
src/dev_rag/repo_intel/reports/: __init__.py  generator.py
src/dev_rag/repo_intel/tools/: __init__.py  file_manager.py  manifest_parser.py  repo_scanner.py  script_risk_scanner.py  secret_scanner.py
src/dev_rag/retrieval/: __init__.py  hybrid_search.py  manifest.py  models.py  pipeline.py  reranker.py  vector_store.py
src/evaluation/: __init__.py  cli.py  dataset_factory.py  evaluator.py
src/ingestion/: __init__.py  chunker.py  embeddings.py  qdrant_uploader.py  schemas.py
src/orchestration/: __init__.py  cli.py  llm_client.py  orchestrator.py  prompt_manager.py
src/retrieval/: __init__.py  hybrid_search.py  reranker.py  retrieval_pipeline.py  vector_store.py
src/second_brain/: __init__.py  app.py  cli.py  config.py
src/second_brain/evaluation/: __init__.py  cli.py  evaluator.py
src/second_brain/ingestion/: __init__.py  chunker.py  cli.py  pipeline.py  qdrant_uploader.py
src/second_brain/orchestration/: __init__.py  cli.py  llm_client.py  orchestrator.py  prompt_manager.py
src/second_brain/repo_intel/: __init__.py  cli.py  graph.py  state.py  web.py
src/second_brain/repo_intel/rag/: __init__.py  indexer.py  models.py  retriever.py
src/second_brain/repo_intel/reports/: __init__.py  generator.py
src/second_brain/repo_intel/tools/: __init__.py  _common.py  file_manager.py  manifest_parser.py  repo_scanner.py  script_risk_scanner.py  secret_scanner.py
src/second_brain/retrieval/: __init__.py  hybrid_search.py  manifest.py  pipeline.py  reranker.py  vector_store.py
tests/: test_chunker.py  test_cli.py  test_evaluation.py  test_orchestration.py  test_repo_intel_rag.py  test_repo_intel_reports.py  test_repo_intel_tools.py  test_retrieval.py
