[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-rag-kit"
version = "0.1.0"
description = "Reusable local RAG toolkit and repository intelligence CLI for developer documentation."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Matvey" },
]
keywords = ["rag", "qdrant", "lm-studio", "retrieval", "reranking", "ragas", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "qdrant-client>=1.9,<2",
    "sentence-transformers>=2.7,<4",
    "numpy>=1.26,<3",
    "markdown-it-py>=3.0,<4",
    "rank-bm25>=0.2.2,<1",
    "openai>=1.30,<2",
]

[project.urls]
Homepage = "https://github.com/mentalprotector/dev-rag-kit"
Repository = "https://github.com/mentalprotector/dev-rag-kit"
Issues = "https://github.com/mentalprotector/dev-rag-kit/issues"

[project.scripts]
dev-rag = "dev_rag.cli:main"
repo-check = "dev_rag.repo_intel.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]
eval = [
    "ragas>=0.1.10,<1",
    "datasets>=2.19,<4",
    "pandas>=2.2,<3",
    "langchain-openai>=0.1.8,<1",
]
repo-intel = [
    "langgraph>=0.2.0,<1",
    "langchain-core>=0.2.0,<1",
]
web = [
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
]
all = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "ragas>=0.1.10,<1",
    "datasets>=2.19,<4",
    "pandas>=2.2,<3",
    "langchain-openai>=0.1.8,<1",
    "langgraph>=0.2.0,<1",
    "langchain-core>=0.2.0,<1",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = ["ANN101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
